fix: price alignment

--- a/assets/styles/component/page.scss
+++ b/assets/styles/component/page.scss
@@ -192,7 +192,7 @@ button {
     align-items: center;
     color: white;
     font-size: 22px;
-
+    justify-content: center;
 
   }
 
